--- a/details.html
+++ b/details.html
@@ -7,6 +7,9 @@
     <title>Cargo Administration</title>
 
     <script src="scripts/jquery-2.1.1.min.js"></script>
+    <script src="scripts/angular.min.js"></script>
+    <script src="scripts/angular-resource.min.js"></script>
+    <script src="scripts/controllers.js"></script>
 
     <!-- Bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -15,7 +18,7 @@
     <!-- bootstrap-datepicker -->
     <link rel="stylesheet" href="styles/datepicker3.css">
   </head>
-  <body ng-controller="TrackCtrl">
+  <body ng-controller="CargoDetailsCtrl">
     <div class="container-fluid">
 
       <!-- Header -->
@@ -24,42 +27,44 @@
 	<h1>Cargo Booking and Routing</h1>
       </div>
 
-      <!-- Show cargo information dialog -->
-      <div class="panel panel-default">
-	<table class="table">
-	  <tr>
-	    <td>Origin</td>
-	    <td>CNHKG</td>
-	  </tr>
-	  <tr>
-	    <td>Destination</td>
-	    <td>CNSHA<br/><a href="#" data-toggle="modal" data-target="#changeDestinationDialog">Change destination</a></td>
-	  </tr>
-	  <tr>
-	    <td>Arrival deadline</td>
-	    <td>2009-03-15 12:00</td>
-	  </tr>
-	</table>
-      </div>
-      <div class="has-error">
-	<span class="help-block">Cargo is misrouted - <a href="#">reroute this cargo</a></span>
-      </div>
-      <div class="panel panel-default">
-	<div class="panel-heading">Itinerary</div>
-	<table class="table">
-	  <tr>
-	    <th>Voyage number</th>
-	    <th colspan="2">Load</th>
-	    <th colspan="2">Unload</th>
-	  </tr>
-	  <tr>
-	    <td>0100S</td>
-	    <td>CNHKG</td>
-	    <td>(2009-03-02 12:00)</td>
-	    <td>USNYC</td>
-	    <td>(2009-03-05 12:00)</td>
-	  </tr>
-	</table>
+      <div ng-show="cargo">
+	<!-- Show cargo information dialog -->
+	<div class="panel panel-default">
+	  <table class="table">
+	    <tr>
+	      <td>Origin</td>
+	      <td>{{ cargo.origin }}</td>
+	    </tr>
+	    <tr>
+	      <td>Destination</td>
+	      <td>{{ cargo.destination }}<br/><a href="#" data-toggle="modal" data-target="#changeDestinationDialog">Change destination</a></td>
+	    </tr>
+	    <tr>
+	      <td>Arrival deadline</td>
+	      <td>{{ cargo.arrivalDeadline }}</td>
+	    </tr>
+	  </table>
+	</div>
+	<div class="has-error">
+	  <span class="help-block">Cargo is misrouted - <a href="#">reroute this cargo</a></span>
+	</div>
+	<div class="panel panel-default">
+	  <div class="panel-heading">Itinerary</div>
+	  <table class="table">
+	    <tr>
+	      <th>Voyage number</th>
+	      <th colspan="2">Load</th>
+	      <th colspan="2">Unload</th>
+	    </tr>
+	    <tr>
+	      <td>0100S</td>
+	      <td>CNHKG</td>
+	      <td>(2009-03-02 12:00)</td>
+	      <td>USNYC</td>
+	      <td>(2009-03-05 12:00)</td>
+	    </tr>
+	  </table>
+	</div>
       </div>
 
       <a class="btn btn-primary" href="list.html">Return to cargo list</a>
@@ -114,6 +119,6 @@
     <!-- Footer -->
     <div class="text-center">
     </div>
-</div>
-</body>
+    </div>
+  </body>
 </html>
