--- a/details.html
+++ b/details.html
@@ -45,25 +45,35 @@
 	    </tr>
 	  </table>
 	</div>
-	<div class="has-error">
-	  <span class="help-block">Cargo is misrouted - <a href="#">reroute this cargo</a></span>
+
+	<div ng-if="cargo.routed">
+	  <div class="has-error" ng-if="cargo.misrouted">
+	    <span class="help-block">Cargo is misrouted - <a href="#">Reroute this cargo</a></span>
+	  </div>
+
+	  <div class="panel panel-default">
+	    <div class="panel-heading">Itinerary</div>
+	    <table class="table">
+	      <tr>
+		<th>Voyage number</th>
+		<th colspan="2">Load</th>
+		<th colspan="2">Unload</th>
+	      </tr>
+	      <tr>
+		<td>0100S</td>
+		<td>CNHKG</td>
+		<td>(2009-03-02 12:00)</td>
+		<td>USNYC</td>
+		<td>(2009-03-05 12:00)</td>
+	      </tr>
+	    </table>
+	  </div>
 	</div>
-	<div class="panel panel-default">
-	  <div class="panel-heading">Itinerary</div>
-	  <table class="table">
-	    <tr>
-	      <th>Voyage number</th>
-	      <th colspan="2">Load</th>
-	      <th colspan="2">Unload</th>
-	    </tr>
-	    <tr>
-	      <td>0100S</td>
-	      <td>CNHKG</td>
-	      <td>(2009-03-02 12:00)</td>
-	      <td>USNYC</td>
-	      <td>(2009-03-05 12:00)</td>
-	    </tr>
-	  </table>
+
+	<div ng-if="cargo.routed == 'false'">
+	  <div class="has-warning">
+	    <span class="help-block">Cargo has not been routed - <a href="#">Route this cargo</a></span>
+	  </div>
 	</div>
       </div>
 
