Fix js conditional.

--- a/details.html
+++ b/details.html
@@ -70,7 +70,7 @@
 	  </div>
 	</div>
 
-	<div ng-if="cargo.routed == 'false'">
+	<div ng-if="cargo.routed === false">
 	  <div class="has-warning">
 	    <span class="help-block">Cargo has not been routed - <a href="#">Route this cargo</a></span>
 	  </div>
