--- a/details.html
+++ b/details.html
@@ -94,25 +94,13 @@
 	  <div class="modal-body">
 	    <form class="form-horizontal" role="form">
 	      <div class="form-group">
-		<label class="col-sm-4 control-label">Current destination</label>
-		<div class="btn-group">
-		  <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle disabled">
-		    NLRTM <span class="caret"></span>
-		  </button>
-		</div>
-	      </div>
-	      <div class="form-group">
-		<label class="col-sm-4 control-label">New destination</label>
+		<label class="col-sm-4 control-label">New Destination</label>
 		<div class="btn-group">
 		  <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-		    CNSHA <span class="caret"></span>
+		    {{ selectedDestination }}&nbsp;<span class="caret"></span>
 		  </button>
 		  <ul class="dropdown-menu">
-		    <li><a href="#">CNSHA</a></li>
-		    <li><a href="#">USNYC</a></li>
-		    <li><a href="#">USCHI</a></li>
-		    <li><a href="#">CNHKG</a></li>
-		    <li><a href="#">DEHAM</a></li>
+		    <li ng-repeat="l in locations"><a href="" ng-click="selectDestination(l.locode)">{{ l.locode }}</a><li>
 		  </ul>
 		</div>
 	      </div>
@@ -120,7 +108,7 @@
 	  </div>
 	  <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Change destination</button>
+            <button type="button" class="btn btn-primary" ng-click="changeDestination()">Change destination</button>
 	  </div>
 	</div>
       </div>
