--- a/list.html
+++ b/list.html
@@ -61,7 +61,7 @@
 	    <td><a href="details.html#/?trackingId={{ c.trackingId }}">{{ c.trackingId }}</a></td>
 	    <td>{{ c.origin }}</td>
 	    <td>{{ c.destination }}</td>
-	    <td>Yes</td>
+	    <td>{{ c.routed === true ? 'Yes' : 'No'}}</td>
 	  </tr>
 	</table>
       </div>
