Add page for selecting itinerary.

--- a/details.html
+++ b/details.html
@@ -72,7 +72,7 @@
 
 	<div ng-if="cargo.routed === false">
 	  <div class="has-warning">
-	    <span class="help-block">Cargo has not been routed - <a href="#">Route this cargo</a></span>
+	    <span class="help-block">Cargo has not been routed - <a href="selectItinerary.html#/?trackingId={{ cargo.trackingId }}">Route this cargo</a></span>
 	  </div>
 	</div>
       </div>
