--- a/details.html
+++ b/details.html
@@ -59,12 +59,12 @@
 		<th colspan="2">Load</th>
 		<th colspan="2">Unload</th>
 	      </tr>
-	      <tr>
-		<td>0100S</td>
-		<td>CNHKG</td>
-		<td>(2009-03-02 12:00)</td>
-		<td>USNYC</td>
-		<td>(2009-03-05 12:00)</td>
+	      <tr ng-repeat="leg in cargo.legs">
+		<td>{{ leg.voyage }}</td>
+		<td>{{ leg.from }}</td>
+		<td>{{ leg.loadTime }}</td>
+		<td>{{ leg.to }}</td>
+		<td>{{ leg.unloadTime }}</td>
 	      </tr>
 	    </table>
 	  </div>
