Assign cargo to route.

--- a/selectItinerary.html
+++ b/selectItinerary.html
@@ -46,7 +46,7 @@
 	    <td>{{ leg.unloadTime }}</td>
 	  </tr>
 	</table>
-	<div class="panel-footer text-right"><a class="btn btn-primary" href="#">Assign cargo to this route</a></div>
+	<div class="panel-footer text-right"><a class="btn btn-primary" ng-click="assignToRoute(it)">Assign cargo to this route</a></div>
       </div>
 
       <a class="btn btn-primary" href="list.html">Return to cargo list</a>
