Reroute cargo when misdirected.

--- a/details.html
+++ b/details.html
@@ -48,7 +48,7 @@
 
 	<div ng-if="cargo.routed">
 	  <div class="has-error" ng-if="cargo.misrouted">
-	    <span class="help-block">Cargo is misrouted - <a href="#">Reroute this cargo</a></span>
+	    <span class="help-block">Cargo is misrouted - <a href="selectItinerary.html#/?trackingId={{ cargo.trackingId }}">Reroute this cargo</a></span>
 	  </div>
 
 	  <div class="panel panel-default">
