--- a/index.html
+++ b/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<html ng-app="trackApp">
+<html ng-app="app">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>Track your cargo</title>
+    <title>DDDelivery</title>
 
     <script src="scripts/jquery-2.1.1.min.js"></script>
     <script src="scripts/angular.min.js"></script>
     <script src="scripts/angular-resource.min.js"></script>
+    <script src="scripts/angular-route.min.js"></script>
+
+    <script src="scripts/app.js"></script>
     <script src="scripts/controllers.js"></script>
+    <script src="scripts/services.js"></script>
 
     <!-- Bootstrap -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+    <!-- bootstrap-datepicker -->
+    <script src="scripts/bootstrap-datepicker.js"></script>
+    <link rel="stylesheet" href="styles/datepicker3.css">
+    <!-- Make datepicker to sit on top. -->
+    <style>
+      .datepicker{z-index:1151 !important;}
+    </style>
   </head>
-  <body ng-controller="TrackCtrl">
+  <body>
     <div class="container-fluid">
 
       <!-- Header -->
@@ -23,38 +35,12 @@
 	<h1>Domain Driven Delivery <small>We're ubiquitous!</small></h1>
       </div>
 
-      <!-- Search field -->
-      <form role="form">
-	<div class="form-group">
-	  <div class="input-group">
-	    <input type="text" class="form-control input-lg" placeholder="Enter your tracking id" ng-model="searchQuery" ng-minlength=1>
-	    <span class="input-group-btn">
-              <button class="btn btn-primary btn-lg" type="submit" ng-click="showCargo(searchQuery)" >Track!</button>
-	    </span>
-	  </div>
-	  <span class="help-block">Hint: try tracking "ABC123" or "JKL567".</span>
-	</div>
-      </form>
-
-      <!-- Cargo information -->
-      <div ng-show="cargo">
-	<div style="margin: 40px 0">
-	  <h4>Cargo {{ cargo.trackingId }} is now: {{ cargo.statusText}}</h4>
-	  <p>Estimated time of arrival in {{ cargo.destination }}: {{ cargo.eta }}</p>
-	  <p>{{ cargo.nextExpectedActivity }}</p>
-	</div>
-	<div>
-	  <h5 class="text-uppercase">Handling history</h5>
-	  <ul class="list-group">
-	    <li class="list-group-item" ng-repeat="leg in cargo.events">
-	      <span class="glyphicon" ng-class="leg.expected ? 'glyphicon-ok' : 'glyphicon-exclamation-sign'"></span>&nbsp;&nbsp;{{ leg.description }}
-	    </li>
-	  </ul>
-	</div>
-      </div>
+      <!-- Content -->
+      <div id="view" ng-view></div>
 
       <!-- Footer -->
       <div class="text-center">
+	&copy; Copyright 2014 Marcus Olsson
       </div>
     </div>
   </body>
