Add modal from ui-bootstrap.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="scripts/angular.min.js"></script>
     <script src="scripts/angular-resource.min.js"></script>
     <script src="scripts/angular-route.min.js"></script>
+    <script src="scripts/ui-bootstrap-custom-tpls-0.10.0.js"></script>
 
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers.js"></script>
