--- a/index.html
+++ b/index.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html ng-app="app">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>DDDelivery</title>
-
-    <script src="scripts/jquery-2.1.1.min.js"></script>
-    <script src="scripts/angular.min.js"></script>
-    <script src="scripts/angular-resource.min.js"></script>
-    <script src="scripts/angular-route.min.js"></script>
-    <script src="scripts/ui-bootstrap-custom-tpls-0.10.0.js"></script>
+<head>
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers.js"></script>
     <script src="scripts/services.js"></script>
 
-    <!-- Bootstrap -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+</head>
 
-    <!-- bootstrap-datepicker -->
-    <script src="scripts/bootstrap-datepicker.js"></script>
-    <link rel="stylesheet" href="styles/datepicker3.css">
-    <!-- Make datepicker to sit on top. -->
-    <style>
-      .datepicker{z-index:1151 !important;}
-    </style>
-  </head>
-  <body>
-    <div class="container-fluid">
-
-      <!-- Header -->
-      <div class="page-header text-center">
-	<h1>Domain Driven Delivery <small>We're ubiquitous!</small></h1>
-      </div>
-
-      <!-- Content -->
-      <div id="view" ng-view></div>
-
-      <!-- Footer -->
-      <div class="text-center">
-	&copy; Copyright 2014 Marcus Olsson
-      </div>
+<body>
+    <nav id="myNavbar" class="navbar" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Domain Driven Delivery</a>
+                <p class="navbar-text">We're ubiquitous!</p>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/">About</a></li>
+                <li><a href="#/track">Track</a></li>
+                <li><a href="#/list">Admin</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row">
+            <div id="view" ng-view></div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col-xs-12">
+                <footer>
+                    <p>&copy; Copyright 2014 Marcus Olsson</p>
+                </footer>
+            </div>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
