--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="scripts/controllers.js"></script>
     <script src="scripts/services.js"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="http://bootswatch.com/paper/bootstrap.min.css">
 </head>
 
 <body>
