Add missing glyphs in new paper layout.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <script src="scripts/controllers.js"></script>
     <script src="scripts/services.js"></script>
 
-    <link rel="stylesheet" href="http://bootswatch.com/paper/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/glyphs.css">
 </head>
 
 <body>
