Improve Bootstrap grid layout.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div id="view" ng-view></div>
+            <div class="container">
+                <div id="view" ng-view></div>
+            </div>
         </div>
         <hr>
         <div class="row">
