Add incident logging view.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li><a href="#/">About</a></li>
                 <li><a href="#/track">Track</a></li>
                 <li><a href="#/list">Admin</a></li>
+                <li><a href="#/log">Incident Logging</a></li>
             </ul>
         </div>
     </nav>
