--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 </head>
 
 <body>
-    <nav id="myNavbar" class="navbar" role="navigation">
+    <nav id="myNavbar" class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">Domain Driven Delivery</a> 
             </div>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right text-uppercase">
                 <li><a href="#/track">Track</a></li>
                 <li><a href="#/list">Admin</a></li>
                 <li><a href="#/log">Incident Logging</a></li>
@@ -40,7 +40,7 @@
         </div>
         <hr />
         <div class="row">
-            <div class="col-xs-12">
+            <div class="col-xs-12 text-center">
                 <footer>
                     <p>&copy; Copyright 2014 Marcus Olsson</p>
                 </footer>
