Remove deprecated documentation

--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
     <nav id="myNavbar" class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Domain Driven Delivery</a> 
+                <a class="navbar-brand" href="#/">Domain Driven Delivery</a> 
             </div>
             <ul class="nav navbar-nav navbar-right text-uppercase">
                 <li><a href="#/track">Track</a></li>
                 <li><a href="#/list">Admin</a></li>
                 <li><a href="#/log">Incident Logging</a></li>
-                <li><a href="#/documentation">REST API</a></li>
             </ul>
         </div>
     </nav>
